--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "http-interop/http-factory-guzzle": "^1.2",
         "mnapoli/silly": "^1.7",
         "psr/http-client": "^1.0",
-        "psr/http-factory": "^1.0"
+        "psr/http-factory": "^1.0",
+        "symfony/process": "^5.3"
     },
     "require-dev": {
         "ergebnis/composer-normalize": "^2.15"
