Further restrict the workflow

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,12 +1,15 @@
 # GitHub Actions Documentation: https://docs.github.com/en/actions
 
-name: "open pull request"
+name: "auto pull request"
 
-on: ["push"]
+on:
+  push:
+    branches:
+      - "auto-rfcs/**"
 
 jobs:
   pull-request:
-    name: "Pull request"
+    name: "Auto pull request"
     runs-on: "ubuntu-latest"
     steps:
       - name: "Open pull requests for auto-rfcs/** branches"
