Add pull request title and body

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -18,3 +18,9 @@ jobs:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           BRANCH_PREFIX: "auto-rfcs/"
           PULL_REQUEST_BRANCH: "main"
+          PULL_REQUEST_TITLE: "Update RFCs [Automated]"
+          PULL_REQUEST_BODY: >
+            This is an automated pull request to apply PHP wiki updates
+            to the RFCs in this repository, including any new RFCs found
+            on the wiki.
+          PULL_REQUEST_UPDATE: true
