Retrieve the full repo history and install pandoc

--- a/.github/workflows/auto-rfcs.yml
+++ b/.github/workflows/auto-rfcs.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: "Checkout repository"
         uses: "actions/checkout@v2"
+        with:
+          fetch-depth: 0
 
       - name: "Install PHP"
         uses: "shivammathur/setup-php@v2"
@@ -23,6 +25,11 @@ jobs:
 
       - name: "Install dependencies (Composer)"
         uses: "ramsey/composer-install@v1"
+
+      - name: "Install pandoc"
+        run: |
+          sudo apt-get update
+          sudo apt-get install pandoc
 
       - name: "Automatically update PHP RFCs"
         run: "./bin/auto_rfcs.sh"
