Don't forget the GitHub token

--- a/.github/workflows/auto-rfcs.yml
+++ b/.github/workflows/auto-rfcs.yml
@@ -33,3 +33,5 @@ jobs:
 
       - name: "Automatically update PHP RFCs"
         run: "./bin/auto_rfcs.sh"
+        env:
+          INPUT_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
