Use the latest version of pandoc

--- a/.github/workflows/auto-rfcs.yml
+++ b/.github/workflows/auto-rfcs.yml
@@ -28,8 +28,9 @@ jobs:
 
       - name: "Install pandoc"
         run: |
-          sudo apt-get update
-          sudo apt-get install pandoc
+          curl -LSs -o pandoc.deb https://github.com/jgm/pandoc/releases/download/2.14.2/pandoc-2.14.2-1-amd64.deb
+          sudo apt install -y ./pandoc.deb
+          rm pandoc.deb
 
       - name: "Automatically update PHP RFCs"
         run: "./bin/auto_rfcs.sh"
