--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "mnapoli/silly": "^1.7",
         "psr/http-client": "^1.0",
         "psr/http-factory": "^1.0",
-        "symfony/process": "^5.3"
+        "symfony/process": "^5.3",
+        "twig/twig": "^3.3"
     },
     "require-dev": {
         "ergebnis/composer-normalize": "^2.15"
