--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,13 @@
 {
     "require": {
-        "php": "^8.2"
+        "php": "^8.2",
+        "ext-dom": "*",
+        "ext-tidy": "*",
+        "fig/http-message-util": "^1.1",
+        "laminas/laminas-diactoros": "^3.2",
+        "psr/http-client": "^1.0",
+        "psr/http-factory": "^1.0",
+        "psr/http-message": "^2.0"
     },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
@@ -13,7 +20,7 @@
         "phpunit/phpunit": "^10.3",
         "ramsey/coding-standard": "^2.2",
         "roave/security-advisories": "dev-latest",
-        "squizlabs/php_codesniffer": "^3.7"
+        "squizlabs/php_codesniffer": "dev-master"
     },
     "autoload": {
         "psr-4": {
