Use snapshot testing

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "phpunit/phpunit": "^10.3",
         "ramsey/coding-standard": "^2.2",
         "roave/security-advisories": "dev-latest",
+        "spatie/phpunit-snapshot-assertions": "^5.1",
         "squizlabs/php_codesniffer": "dev-master"
     },
     "autoload": {
