--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,14 @@
         "ext-dom": "*",
         "ext-tidy": "*",
         "fig/http-message-util": "^1.1",
+        "guzzlehttp/guzzle": "^7.8",
         "laminas/laminas-diactoros": "^3.2",
         "psr/http-client": "^1.0",
         "psr/http-factory": "^1.0",
-        "psr/http-message": "^2.0"
+        "psr/http-message": "^2.0",
+        "symfony/filesystem": "^6.3",
+        "symfony/finder": "^6.3",
+        "symfony/process": "^6.3"
     },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
